Complete KhelWell branding update
- Updated application title to 'KhelWell'
- Added tagline: 'Your Game. Your Journey. All in One Place'
- Created modern Logo component with multiple variants
- Updated all pages with new branding (HomePage, LoginPage, RegisterPage, OTPLoginPage, UserDashboard)
- Updated package.json files with new project name and description
- Updated HTML meta tags and manifest.json
- Created SVG logo and updated favicon
- Updated README with new branding and mission statement
- All components now use consistent KhelWell branding throughout

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "turf-booking-backend",
+  "name": "khelwell-backend",
   "version": "1.0.0",
-  "description": "Backend API for Turf Booking Website",
+  "description": "Backend API for KhelWell - Your Game. Your Journey. All in One Place",
   "main": "server.js",
   "scripts": {
     "start": "node server.prod.js",
@@ -11,12 +11,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "turf",
-    "booking",
+    "khelwell",
     "sports",
-    "sports"
+    "turf-booking",
+    "events",
+    "community"
   ],
-  "author": "creatimatix",
+  "author": "Creatimatix",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
